@startuml
!define TABLE(x) class x << (T,#FFAAAA) >>

TABLE(usuarios) {
  id uuid PK
  nombreCompleto varchar(100)
  nombreUsuario varchar(50) UNIQUE
  correo varchar(100) UNIQUE
  contrasenia varchar(255)
  numeroTelefono varchar(20)
  rol enum
  estado enum
  bloqueadorId uuid FK NULL
  razonBloqueo varchar NULL
  cantidadPublicacionesBloqueadas int
  creadoEn timestamp
  actualizadoEn timestamp
}

TABLE(publicacion) {
  id uuid PK
  creadorId uuid
  titulo varchar(100)
  descripcion text
  categoriaId uuid
  localidadId uuid
  condicion enum
  imagenUrls jsonb
  estado enum
  version int
  createdAt timestamp
  updatedAt timestamp NULL
  deletedAt timestamp NULL
}

TABLE(solicitudes) {
  id uuid PK
  publicacionId uuid FK
  solicitanteId uuid FK
  creadorPublicacionId uuid FK
  mensaje varchar(255) NULL
  estado enum
  motivoRechazo varchar(255) NULL
  motivoCancelacion varchar(255) NULL
  version int
  createdAt timestamp
  updatedAt timestamp
}

TABLE(denuncias) {
  id uuid PK
  publicacionId uuid
  denuncianteId uuid
  creadorPublicacionId uuid
  motivo enum
  comentario varchar(500) NULL
  estado enum
  moderadorAsignadoId uuid NULL
  tipoResolucion enum NULL
  detalleResolucion varchar(500) NULL
  fechaResolucion timestamp NULL
  version int
  fechaCreacion timestamp
  fechaActualizacion timestamp
}

TABLE(notificaciones) {
  id uuid PK
  destinatarioId uuid FK
  tipo enum
  titulo varchar(100)
  mensaje text
  leidaEn timestamp NULL
  solicitudId uuid FK NULL
  publicacionId uuid FK NULL
  denunciaId uuid FK NULL
  creadaEn timestamp
}

usuarios "0..1" -- "0..*" usuarios : bloqueadorId

publicacion "1" -- "0..*" solicitudes : publicacionId
usuarios "1" -- "0..*" solicitudes : solicitanteId
usuarios "1" -- "0..*" solicitudes : creadorPublicacionId

usuarios "1" -- "0..*" notificaciones : destinatarioId
solicitudes "0..1" -- "0..*" notificaciones : solicitudId
publicacion "0..1" -- "0..*" notificaciones : publicacionId
denuncias "0..1" -- "0..*" notificaciones : denunciaId


@enduml